<resources>
    <string name="app_name">Starwars</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="ler_qrcode">Ler QRCode</string>
    <string name="lista_vazia">Lista vazia</string>
    <string name="name">Name</string>
    <string name="height">Height</string>
    <string name="mass">Mass</string>
    <string name="hair_color">Hair Color</string>
    <string name="skin_color">Skin Color</string>
    <string name="eye_color">Eye Color</string>
    <string name="birth_year">Birth Year</string>
    <string name="gender">Gender</string>
    <string name="created">Created</string>
    <string name="edited">Edited</string>
    <string name="permissao_para_acessar_o_sdcard_foi_negada">Permissão para acessar o SDCard foi negada !</string>
    <string name="permissao_para_acessar_a_camera_foi_negada">Permissão para acessar a câmera foi negada !</string>
    <string name="permissao_para_obtencao_da_localizacao_foi_negada">Permissão para obtenção da localização foi negada !</string>
    <string name="id">Id</string>
    <string name="personagem_ja_existe">Personagem já existe !</string>
    <string name="status">Status</string>
    <string name="buscando_poster">Buscando poster ...</string>
</resources>
