<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detalhes"
    android:fillViewport="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.levimendesestudos.starwars.activities.DetalhesActivity">

    <ListView
        android:id="@+id/lvFilms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:fillViewport="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="br.com.levimendesestudos.starwars.activities.DetalhesActivity">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:text="@string/id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <EditText
                    android:enabled="false"
                    android:id="@+id/etId"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    />

            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <EditText
                    android:enabled="false"
                    android:id="@+id/etName"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    />

            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <EditText
                    android:enabled="false"
                    android:id="@+id/etHeight"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    />

            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/mass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <EditText
                    android:enabled="false"
                    android:id="@+id/etMassa"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    />

            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/hair_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <EditText
                    android:enabled="false"
                    android:id="@+id/etHairColor"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    />

            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/skin_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <EditText
                    android:enabled="false"
                    android:id="@+id/etSkinColor"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    />

            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/eye_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <EditText
                    android:enabled="false"
                    android:id="@+id/etEyeColor"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    />

            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/birth_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <EditText
                    android:enabled="false"
                    android:id="@+id/etBirthYear"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    />

            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <EditText
                    android:enabled="false"
                    android:id="@+id/etGender"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    />

            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/created"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <EditText
                    android:enabled="false"
                    android:id="@+id/etCreated"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    />

            </TableRow>

            <TableRow>

                <TextView
                    android:text="@string/edited"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <EditText
                    android:enabled="false"
                    android:id="@+id/etEdited"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    />

            </TableRow>

        </TableLayout>

    </ScrollView>

</LinearLayout>